<resources>
    <string name="app_name">AndroidToolBox</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="texte_entree">Bonjour</string>
    <string name="cycle_vie">Cycle de Vie</string>
    <string name="save">Sauvegarde</string>
    <string name="permission">Permission</string>
    <string name="web_service">WebServices</string>
    <string name="connexion_text">CONNEXION</string>
    <string name="valider_button">VALIDER</string>
    <string name="identifiant_login">Identifiant</string>
    <string name="password">Mot de Passe</string>
    <string name="etat_texte">etat</string>
    <string name="etat_text" />
    <string name="bonjour" />
    <string name="Nom_input">NOM</string>
    <string name="textInputNOM">NOM</string>
    <string name="nomUtilisateur">NOM</string>
    <string name="prenomUtilisateur">PRENOM</string>
    <string name="dateUtilisateur" translatable="false">30/04/1997</string>
    <string name="etatText">test</string>
    <string name="etatTexte" />
    <string name="envoyer_button">ENVOYER</string>
    <string name="dateUser">Date :</string>
    <string name="dateUsers" />
    <string name="birthday">Date de Naissance</string>
    <string name="showButton">Show !</string>
    <string name="accesTextView">Accès aux informations Android</string>
    <string name="accesTextView2">Contact de</string>
    <string name="nothing" />
    <string name="photo">picture you take</string>
    <string name="userImageView">image of the user</string>
    <string name="nameUserInput" />
    <string name="userAddress" />
    <string name="userMailAdress" />
    <string name="bluetooth">bluetooth</string>
    <string name="empty" />
    <string name="distance">90</string>
    <string name="LIRE">LIRE</string>
    <string name="ECRITURE">ECRITURE</string>
    <string name="LECTURE">LECTURE</string>
    <string name="NOTIFICATION">NOTIFICATION</string>
    <string name="play">play</string>
    <string name="charac">characteristique</string>
    <string name="uuid">uuid</string>
    <string name="propriete" />
    <string name="proprietes">propriete</string>
    <string name="val">valeur</string>
    <string name="carac">Caractéristique Spécifique</string>
    <string name="ECRIRE">ECRIRE</string>
    <string name="ANNULER">ANNULER</string>
    <string name="VALEUR">Veuillez entrer une valeur</string>
    <string name="nomTitreTextView">TITRE</string>
    <string name="nomFirstTextView">FIRST</string>
    <string name="nomLastTextView">LAST</string>
    <string name="locationStreetTextView">STREET</string>
    <string name="locationCityTextView">CITY</string>
    <string name="locationStateTextView">STATE</string>
    <string name="locationPostCodeTextView">POST CODE</string>
    <string name="IDENTITE">IDENTITE</string>
    <string name="ADRESSE">ADRESSE</string>
    <string name="COORDONNEES">COORDONNEES</string>
    <string name="DOBTextView">DOB</string>
    <string name="ageTextView">AGE</string>
    <string name="eMailTextView">E-MAIL</string>
    <string name="phoneTtextView">PHONE</string>
    <string name="cellTextView">CELL</string>
    <string name="STREET">STREET</string>
</resources>
