<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/cardview_shadow_start_color">

    <TextView
        android:id="@+id/CharacteristiqueTtextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/empty"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.14"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/UUIDTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/empty"
        app:layout_constraintEnd_toEndOf="@+id/CharacteristiqueTtextView"
        app:layout_constraintStart_toStartOf="@+id/CharacteristiqueTtextView"
        app:layout_constraintTop_toBottomOf="@+id/CharacteristiqueTtextView" />

    <TextView
        android:id="@+id/ProprieteTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/empty"
        app:layout_constraintEnd_toEndOf="@+id/UUIDTextView"
        app:layout_constraintStart_toStartOf="@+id/UUIDTextView"
        app:layout_constraintTop_toBottomOf="@+id/UUIDTextView" />

    <TextView
        android:id="@+id/ValeurTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:background="@color/cardview_shadow_end_color"
        android:text="@string/empty"
        app:layout_constraintEnd_toEndOf="@+id/ProprieteTextView"
        app:layout_constraintStart_toStartOf="@+id/ProprieteTextView"
        app:layout_constraintTop_toBottomOf="@+id/ProprieteTextView" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="32dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/LECTURE"
        android:textColor="@color/design_default_color_on_primary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ValeurTextView" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:text="@string/ECRITURE"
        android:textColor="@color/design_default_color_on_primary"
        app:layout_constraintBottom_toBottomOf="@+id/button"
        app:layout_constraintEnd_toStartOf="@+id/button3"
        app:layout_constraintStart_toEndOf="@+id/button"
        app:layout_constraintTop_toTopOf="@+id/button" />

    <Button
        android:id="@+id/button3"
        android:layout_width="106dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/NOTIFICATION"
        android:textColor="@color/design_default_color_on_primary"
        app:layout_constraintBottom_toBottomOf="@+id/button2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/button2" />
</androidx.constraintlayout.widget.ConstraintLayout>