<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="256dp"
        android:layout_height="86dp"
        android:layout_marginTop="32dp"
        android:importantForAccessibility="no"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logoisen" />

    <TextView
        android:id="@+id/bonjour"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/bonjour"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.471"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <ImageButton
        android:id="@+id/cycle_de_vie_button"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="24dp"
        android:background="@android:color/holo_red_dark"
        android:importantForAccessibility="no"
        app:layout_constraintEnd_toStartOf="@+id/webservice_button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bonjour"
        app:srcCompat="@android:drawable/stat_notify_chat" />

    <ImageButton
        android:id="@+id/webservice_button"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="24dp"
        android:background="@android:color/holo_red_dark"
        android:importantForAccessibility="no"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/cycle_de_vie_button"
        app:layout_constraintTop_toBottomOf="@+id/bonjour"
        app:srcCompat="@android:drawable/stat_sys_download" />


    <ImageButton
        android:id="@+id/permission_button"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="24dp"
        android:background="@android:color/holo_red_dark"
        android:importantForAccessibility="no"
        app:layout_constraintEnd_toStartOf="@+id/sauvegarde_button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cycledevie"
        app:srcCompat="@android:drawable/stat_sys_speakerphone" />

    <ImageButton
        android:id="@+id/blutooht_button"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="24dp"
        android:background="@android:color/holo_red_dark"
        android:importantForAccessibility="no"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/permission_button"
        app:layout_constraintStart_toStartOf="@+id/permission_button"
        app:layout_constraintTop_toBottomOf="@+id/permission"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@android:drawable/stat_sys_data_bluetooth" />

    <ImageButton
        android:id="@+id/sauvegarde_button"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:background="@android:color/holo_red_dark"
        android:importantForAccessibility="no"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/permission_button"
        app:layout_constraintTop_toTopOf="@+id/permission_button"
        app:srcCompat="@android:drawable/stat_notify_sdcard" />

    <TextView
        android:id="@+id/cycledevie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/cycle_vie"
        app:layout_constraintEnd_toEndOf="@+id/cycle_de_vie_button"
        app:layout_constraintStart_toStartOf="@+id/cycle_de_vie_button"
        app:layout_constraintTop_toBottomOf="@+id/cycle_de_vie_button" />

    <TextView
        android:id="@+id/permission"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/permission"
        app:layout_constraintEnd_toEndOf="@+id/permission_button"
        app:layout_constraintStart_toStartOf="@+id/permission_button"
        app:layout_constraintTop_toBottomOf="@+id/permission_button" />

    <TextView
        android:id="@+id/bluetooth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/bluetooth"
        app:layout_constraintEnd_toEndOf="@+id/blutooht_button"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintStart_toStartOf="@+id/blutooht_button"
        app:layout_constraintTop_toBottomOf="@+id/blutooht_button" />

    <TextView
        android:id="@+id/sauvergarde"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/save"
        app:layout_constraintEnd_toEndOf="@+id/sauvegarde_button"
        app:layout_constraintStart_toStartOf="@+id/sauvegarde_button"
        app:layout_constraintTop_toBottomOf="@+id/sauvegarde_button" />

    <TextView
        android:id="@+id/webservice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/web_service"
        app:layout_constraintEnd_toEndOf="@+id/webservice_button"
        app:layout_constraintStart_toStartOf="@+id/webservice_button"
        app:layout_constraintTop_toBottomOf="@+id/webservice_button" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/deconnexion_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:clickable="true"
        app:backgroundTint="@android:color/holo_red_dark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.921"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.993"
        app:srcCompat="@android:drawable/ic_lock_idle_lock" />


</androidx.constraintlayout.widget.ConstraintLayout>